@@ -1,3 +1,10 @@
+Sun Jun 17 12:02:19 UTC 2007 Juergen Kahrs <jkahrs@users.sourceforge.net>
+
+	Sync with savannah gawk cvsps 121. Ignoring cvsps 120 (po directory).
+	* ChangeLog, NEWS, main.c: New option `--use-lc-numeric' allows
+	the use of the local decimal point.
+	Test Case badargs fails now; this will be fixed soon.
+
 Sun Jun  3 12:48:09 UTC 2007 Juergen Kahrs <jkahrs@users.sourceforge.net>
 
 	Sync with savannah gawk cvsps 119.
